--- a/Geonet/app/src/main/res/layout/sign_in_activity.xml
+++ b/Geonet/app/src/main/res/layout/sign_in_activity.xml
@@ -21,19 +21,10 @@
         android:layout_alignParentStart="true"
         />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher_p"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="74dp"
-        android:id="@+id/imageView2" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="30dp"
         android:id="@+id/textView5"
         android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true"
@@ -53,5 +44,14 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="16dp"
         android:gravity="center"/>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_marginTop="48dp"
+        android:id="@+id/imageView2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
