--- a/Geonet/app/src/main/res/layout/tab_activity.xml
+++ b/Geonet/app/src/main/res/layout/tab_activity.xml
@@ -20,9 +20,14 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_scrollFlags="enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay">
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Toolbar Title"
+                android:layout_gravity="right"
+                android:id="@+id/toolbar_title"></TextView>
         </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
